syntax = "proto3";

package subroutines;

service RpcSubroutines {
	rpc Create(RpcCreateSubroutineRequest) returns (RpcSubroutine) {}
}

enum RpcSubroutineStatusCode {
	UNKNOWN_SUBROUTINE_STATUS = 0;
	STOPPED = 1;
	RUNNING = 2;
	CRASHED = 3;
}

message RpcSubroutine {
	string fleet = 1;
	string namespace = 2;
	string path = 3;
	RpcSubroutineStatus status = 4;
	string subroutine_definition_id = 5;
}

message RpcCreateSubroutineRequest {
	string fleet = 1;
	string namespace = 2;
	string subroutine_definition_id = 3;
}

message RpcSubroutineStatus {
	RpcSubroutineStatusCode code = 1;
	optional int32 pid = 2;
}
